# AI-Music-Studio-VST

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-vsti.yml  deploy-pages.yml  release-vsti.yml
Source/: BinaryDataPlaceholder.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: app.js  index.html  styles.css
docs/data/: instruments.json
packaging/catalogs/: fx-pack.json
scripts/: build_external_sample_pack.py  build_windows_fx_installer.py  build_windows_installer.py  combine_release_assets.py  fetch_open_instrument_samples.py  fetch_tr909_samples.py  package_platform_builds.py  render_instrument_screenshots.py
tools/: ScreenshotExporterMain.cpp
